--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-awesome-musicplayer",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "a music player by vuepress",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,10 @@
     "gh-pages": "^2.0.1",
     "release-it": "^10.3.1",
     "vuepress": "^1.8.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daodaolee/vuepress-plugin-awesome-musicplayer"
   },
   "dependencies": {
     "@better-scroll/core": "^2.0.0-alpha.20",
