--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vuepress dev docs --temp .temp",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2"
   },
   "keywords": [
     "vuepress",
@@ -16,6 +17,7 @@
   "author": "daodaolee",
   "license": "MIT",
   "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "gh-pages": "^2.0.1",
     "release-it": "^10.3.1",
     "vuepress": "^1.8.2"
@@ -36,5 +38,10 @@
     "sass-loader": "^7.1.0",
     "vuex": "^3.0.1",
     "axios": "^0.21.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
