--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-awesome-musicplayer",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "a music player by vuepress",
   "main": "index.js",
   "scripts": {
@@ -17,9 +17,6 @@
   "author": "daodaolee",
   "license": "MIT",
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0",
-    "gh-pages": "^2.0.1",
-    "release-it": "^10.3.1",
     "vuepress": "^1.8.2"
   },
   "repository": {
@@ -30,18 +27,11 @@
     "@better-scroll/core": "^2.0.0-alpha.20",
     "@better-scroll/mouse-wheel": "^2.0.0-alpha.20",
     "@better-scroll/scroll-bar": "^2.0.0-alpha.20",
+    "axios": "^0.21.1",
     "better-scroll": "^1.15.2",
-    "good-storage": "^1.1.0",
     "lodash-es": "^4.17.15",
     "node-sass": "^4.11.0",
-    "resize-observer-polyfill": "^1.5.1",
     "sass-loader": "^7.1.0",
-    "vuex": "^3.0.1",
-    "axios": "^0.21.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "vuex": "^3.0.1"
   }
 }
